[package]
name = "lorry"
version = "0.1.0"
authors = ["Jakob Neufeld <jakob.n.neufeld@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MPL"
descrtption = "Make Cargo.toml files with rust"
repository = "https://github.com/mast3rsoft/lorry"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = "0.2.0"
ansi_term = "0.12.1"
