[package]
name = "lorry"
version = "0.1.5"
authors = ["Jakob Neufeld <jakob.n.neufeld@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MPL-2.0"
description = "Make Cargo.toml files with rust"
documentation  = "https://docs.rs/lorry"
repository = "https://github.com/mast3rsoft/lorry"

[dependencies]
toml_edit = "0.2.0"
ansi_term = "0.12.1"
